added typehints and additional notebooks

--- a/docs/examples/sweep/sweep_basic_example.ipynb
+++ b/docs/examples/sweep/sweep_basic_example.ipynb
@@ -13,18 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\a-sochat\\AppData\\Local\\Continuum\\Anaconda3\\envs\\qcodes\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys \n",
     "sys.path.append(r\"C:\\Users\\a-sochat\\development\\Qcodes_Sohail_Clone\\Qcodes\")\n",
@@ -34,13 +25,13 @@
     "import qcodes as qc\n",
     "from qcodes.instrument.parameter import ManualParameter\n",
     "from qcodes.sweep.sweep import (\n",
-    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, measurement, setter\n",
+    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, getter, setter\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "x [V]|\n"
      ]
     }
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "y [V],x [V]|\n"
      ]
     }
@@ -171,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,13 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "z [V],y [V],x [V]|\n"
      ]
     }
@@ -240,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,13 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "|m [A]\n"
      ]
     }
@@ -319,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -346,13 +341,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "y [V],x [V]|m [A]\n"
      ]
     }
@@ -375,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -413,13 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "y [V],x [V]|m [A],n [A]\n"
      ]
     }
@@ -439,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,13 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "y [V]|m [A]\n",
       "y [V],x [V]|n [A]\n"
      ]
@@ -537,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -579,24 +577,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@measurement([(\"meas3\", \"H\")])\n",
+    "@getter([(\"meas3\", \"H\")])\n",
     "def measurement_function(): \n",
     "    return int(np.random.normal(0, 1) * 10) / 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "x [V]|meas3 [H]\n"
      ]
     }
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -616,10 +615,10 @@
      "output_type": "stream",
      "text": [
       "x [V] | meas3 [H]\n",
-      " 0\t 0.5\n",
-      " 1\t 0.5\n",
-      " 2\t -0.3\n",
-      " 3\t 1.0\n"
+      " 0\t -0.8\n",
+      " 1\t 1.0\n",
+      " 2\t -1.4\n",
+      " 3\t -0.1\n"
      ]
     }
    ],
@@ -631,11 +630,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@measurement([(\"m3\", \"H\"), (\"m4\", \"H\")])\n",
+    "@getter([(\"m3\", \"H\"), (\"m4\", \"H\")])\n",
     "def measurement_function(): \n",
     "    meas3 = int(np.random.normal(0, 1) * 10) / 10\n",
     "    meas4 = int(np.random.normal(-5, 1) * 10) / 10\n",
@@ -644,13 +643,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "x [V]|m3 [H],m4 [H]\n"
      ]
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -671,10 +671,10 @@
      "output_type": "stream",
      "text": [
       "x [V] | m3 [H]\tm4 [H]\n",
-      " 0\t -1.3\t -6.1\n",
-      " 1\t 0.3\t -3.9\n",
-      " 2\t 1.8\t -4.5\n",
-      " 3\t 0.4\t -5.7\n"
+      " 0\t -1.8\t -6.0\n",
+      " 1\t 1.1\t -3.3\n",
+      " 2\t -1.2\t -4.4\n",
+      " 3\t 1.0\t -4.7\n"
      ]
     }
    ],
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,13 +702,12 @@
     "\n",
     "@setter([(\"xs\", \"V\")])\n",
     "def setter1(value): \n",
-    "    x.set(2 * value)\n",
-    "    return value "
+    "    x.set(2 * value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -716,10 +715,10 @@
      "output_type": "stream",
      "text": [
       "xs [V] | m3 [H]\tm4 [H]\n",
-      " 0\t 0.4\t -5.5\n",
-      " 1\t -0.2\t -5.7\n",
-      " 2\t 0.8\t -5.9\n",
-      " 3\t -0.9\t -5.1\n"
+      " 0\t 0.0\t -6.1\n",
+      " 1\t -0.3\t -6.1\n",
+      " 2\t -0.7\t -5.1\n",
+      " 3\t -0.1\t -5.8\n"
      ]
     }
    ],
@@ -733,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -753,10 +752,10 @@
      "output_type": "stream",
      "text": [
       "xs [V]\tys [V] | m3 [H]\tm4 [H]\n",
-      " 0\t 4\t -1.4\t -4.9\n",
-      " 1\t 5\t -0.5\t -4.9\n",
-      " 2\t 7\t 0.9\t -6.0\n",
-      " 3\t 8\t -0.2\t -5.4\n"
+      " 0\t 4\t -0.7\t -4.5\n",
+      " 1\t 5\t 0.0\t -6.7\n",
+      " 2\t 7\t -2.1\t -5.4\n",
+      " 3\t 8\t -1.6\t -6.1\n"
      ]
     }
    ],
@@ -780,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,20 +792,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.43508727435185546\n",
-      "-0.9810567871821754\n",
-      "0.5366477121615955\n",
-      "1.3301845095789553\n",
-      "1.1557474282909834\n",
-      "1.5900065293713674\n",
-      "2.0995286704840814\n"
+      "-1.4191075192196463\n",
+      "0.8281400191149166\n",
+      "0.6221177047150014\n",
+      "-1.4631383144545749\n",
+      "0.0058892738735982775\n",
+      "-1.1300481587593867\n",
+      "0.7220635397075417\n",
+      "0.9547568701414154\n",
+      "-0.4584433848446765\n",
+      "0.7466996411578602\n",
+      "-1.6682301917362936\n",
+      "2.9072899044822007\n"
      ]
     }
    ],
@@ -826,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +839,7 @@
        "7.993605115907274"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,14 +861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.9593\n"
+      "7.956\n"
      ]
     }
    ],
@@ -901,18 +905,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
