time trace example code

--- a/docs/examples/sweep/time_trace.ipynb
+++ b/docs/examples/sweep/time_trace.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys \n",
-    "sys.path.append(r\"C:\\Users\\a-sochat\\development\\Qcodes_Sohail_Clone\\Qcodes\")\n",
-    "\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time \n",
     "\n",
-    "import qcodes as qc\n",
+    "from qcodes import Instrument\n",
+    "from qcodes import new_experiment\n",
+    "from qcodes.dataset.plotting import plot_by_id\n",
     "from qcodes.instrument.parameter import ManualParameter\n",
-    "from qcodes.sweep import sweep, nest, chain, szip, getter, setter\n",
-    "from qcodes.sweep.sweep import (\n",
-    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, getter, setter, TimeTrace, \n",
-    "    time_trace\n",
-    ")"
+    "from qcodes.sweep import sweep, getter, run"
    ]
   },
   {
@@ -26,28 +23,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "We will first make a measurement-like class which, instead of saving results to file prints them to standard output\n",
-    "\"\"\"\n",
-    "\n",
-    "class Printer:\n",
-    "    def __init__(self, sweep_object): \n",
-    "        self._ind, self._dep = sweep_object.parameter_table.flatten()\n",
-    "        self._symbols_list = sweep_object.parameter_table.symbols_list()\n",
+    "class SomeInstrument(Instrument): \n",
+    "    def __init__(self, name, time_constant): \n",
+    "        super().__init__(name)\n",
     "        \n",
-    "    def __enter__(self): \n",
-    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind.items()])\n",
-    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep.items()])\n",
-    "        sep = \" | \"\n",
-    "        print((header_ind + sep + header_dep).strip(sep))\n",
+    "        self._time_constant = time_constant\n",
+    "        self._previous_value_time = time.time()\n",
+    "        self._previous_value = 0\n",
+    "        self._current_value = 0\n",
+    "        self._set_point = 0\n",
     "        \n",
-    "        return self\n",
+    "    def _update(self): \n",
+    "        self._previous_value = self._current_value\n",
+    "        self._previous_value_time = time.time()\n",
+    "        \n",
+    "    def _x_set(self, set_point): \n",
+    "        self._set_point = set_point\n",
+    "        self._update()\n",
     "    \n",
-    "    def __exit__(self, type, value, traceback): \n",
-    "        pass\n",
-    "\n",
-    "    def __call__(self, result):\n",
-    "        print(\" \" + \"\\t \".join([str(result[ip]) for ip in self._symbols_list]))"
+    "    def _x_get(self): \n",
+    "        dt = time.time() - self._previous_value_time\n",
+    "        fac = np.exp(-dt/self._time_constant)\n",
+    "        self._current_value = self._previous_value * (1 - fac) + self._set_point * fac\n",
+    "        \n",
+    "        self._update()\n",
+    "        \n",
+    "        return self._current_value"
    ]
   },
   {
@@ -395,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
