Made the getter and setter decorator class agnostic. We should be able to use the getter and setter on class methods as easily as on stand alone functions. The previous commit did not work

--- a/docs/examples/sweep/advanced_subjects/getters_and_setters.ipynb
+++ b/docs/examples/sweep/advanced_subjects/getters_and_setters.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\a-sochat\\development\\qcodes\\qcodes\\utils\\deferred_operations.py:45: UserWarning: DeferredOperations has been deprecated and will be removed in the not-too-distant future.\n",
+      "  warnings.warn(\"DeferredOperations has been deprecated and will be removed \"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time \n",
@@ -15,7 +24,7 @@
     "from qcodes.sweep import sweep, nest, chain, szip, getter, setter\n",
     "from qcodes.sweep.sweep import BaseSweepObject, ParametersTable, wrap_objects, time_trace\n",
     "\n",
-    "from qcodes.sweep.sweep import (\n",
+    "from qcodes.sweep.base_sweep import (\n",
     "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, While\n",
     ")"
    ]
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +271,29 @@
     "with Printer(sweep_object) as printer:\n",
     "    for i in sweep_object:   \n",
     "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mx inferred from r,th,ph\n",
+       "my inferred from r,th,ph\n",
+       "mz inferred from r,th,ph\n",
+       "r [T],th [r],ph [r],mx [T],my [T],mz [T]|"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mag_setter.parameter_table"
    ]
   },
   {
