--- a/docs/examples/sweep/advanced_subjects/advanced_sweep_subjects.ipynb
+++ b/docs/examples/sweep/advanced_subjects/advanced_sweep_subjects.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,8 @@
     "\n",
     "import qcodes as qc\n",
     "from qcodes.instrument.parameter import ManualParameter\n",
-    "from qcodes.sweep.sweep import (\n",
-    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, getter, setter\n",
-    ")"
+    "from qcodes.sweep.base_sweep import (\n",
+    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper)"
    ]
   },
   {
