Update notebook with snapshot examples

--- a/docs/examples/DataSet/Merging existing datasets.ipynb
+++ b/docs/examples/DataSet/Merging existing datasets.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "from qcodes import Station\n",
     "from qcodes.dataset.database import initialise_database\n",
     "from qcodes.dataset.experiment_container import new_experiment\n",
     "from qcodes.dataset.measurements import Measurement\n",
@@ -44,14 +45,16 @@
    "source": [
     "dac = DummyInstrument('dac', gates=['ch1', 'ch2'])\n",
     "lockin = DummyInstrument('lockin', gates=['g'])\n",
-    "lockin.g.unit = 'arb. un.'"
+    "lockin.g.unit = 'arb. un.'\n",
+    "\n",
+    "station = Station(dac, lockin)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We set up some gaussian functioncs to simulate an \"interesting\" conductivity landscape."
+    "We set up some gaussian functions to simulate an \"interesting\" conductivity landscape."
    ]
   },
   {
@@ -105,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 181\n"
+      "Starting experimental run with id: 201\n"
      ]
     }
    ],
@@ -924,8 +927,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x17d30f146d8>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x17d3142bda0>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x263bc29b4e0>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x263bc201278>])"
       ]
      },
      "execution_count": 5,
@@ -955,7 +958,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 182\n"
+      "Starting experimental run with id: 202\n"
      ]
     }
    ],
@@ -1768,8 +1771,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x17d30f77b38>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x17d31093b70>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x263ab36cf98>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x263bc345ba8>])"
       ]
      },
      "execution_count": 7,
@@ -1799,7 +1802,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 183\n"
+      "Starting experimental run with id: 203\n"
      ]
     }
    ],
@@ -2629,8 +2632,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x17d334cbfd0>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x17d335d0518>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x263bc356f98>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x263bc2fe9b0>])"
       ]
      },
      "execution_count": 9,
@@ -3460,8 +3463,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x17d312d55c0>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x17d337c2dd8>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x263bc23b160>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x263c1308e80>])"
       ]
      },
      "execution_count": 11,
@@ -4270,8 +4273,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x17d3391c6a0>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x17d34f117f0>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x263c12709b0>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x263c21240f0>])"
       ]
      },
      "execution_count": 12,
@@ -4282,6 +4285,158 @@
    "source": [
     "fully_merged_ds = merge([dsid1, dsid2, dsid3])\n",
     "plot_by_id(fully_merged_ds.run_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Snapshots\n",
+    "\n",
+    "The snapshots of the original (parent) datasets are automatically put into the merged datasets under the tag `parent_snapshots`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "str_dict = fully_merged_ds.get_metadata('parent_snapshots')\n",
+    "snapshot_dict = json.loads(str_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `snapshot_dict` has string keys (the `run_id` of the parents) and the snapshots as values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['201', '202', '203']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(snapshot_dict.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'station': {'instruments': {'dac': {'functions': {},\n",
+       "    'submodules': {},\n",
+       "    '__class__': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "    'parameters': {'IDN': {'value': {'vendor': None,\n",
+       "       'model': 'dac',\n",
+       "       'serial': None,\n",
+       "       'firmware': None},\n",
+       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'raw_value': {'vendor': None,\n",
+       "       'model': 'dac',\n",
+       "       'serial': None,\n",
+       "       'firmware': None},\n",
+       "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "      'full_name': 'dac_IDN',\n",
+       "      'post_delay': 0,\n",
+       "      'label': 'IDN',\n",
+       "      'vals': '<Anything>',\n",
+       "      'name': 'IDN',\n",
+       "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "      'instrument_name': 'dac',\n",
+       "      'unit': '',\n",
+       "      'inter_delay': 0},\n",
+       "     'ch1': {'value': 0,\n",
+       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'raw_value': 0,\n",
+       "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "      'full_name': 'dac_ch1',\n",
+       "      'post_delay': 0,\n",
+       "      'label': 'Gate ch1',\n",
+       "      'vals': '<Numbers -800<=v<=400>',\n",
+       "      'name': 'ch1',\n",
+       "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "      'instrument_name': 'dac',\n",
+       "      'unit': 'V',\n",
+       "      'inter_delay': 0},\n",
+       "     'ch2': {'value': 0,\n",
+       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'raw_value': 0,\n",
+       "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "      'full_name': 'dac_ch2',\n",
+       "      'post_delay': 0,\n",
+       "      'label': 'Gate ch2',\n",
+       "      'vals': '<Numbers -800<=v<=400>',\n",
+       "      'name': 'ch2',\n",
+       "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "      'instrument_name': 'dac',\n",
+       "      'unit': 'V',\n",
+       "      'inter_delay': 0}},\n",
+       "    'name': 'dac'},\n",
+       "   'lockin': {'functions': {},\n",
+       "    'submodules': {},\n",
+       "    '__class__': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "    'parameters': {'IDN': {'value': {'vendor': None,\n",
+       "       'model': 'lockin',\n",
+       "       'serial': None,\n",
+       "       'firmware': None},\n",
+       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'raw_value': {'vendor': None,\n",
+       "       'model': 'lockin',\n",
+       "       'serial': None,\n",
+       "       'firmware': None},\n",
+       "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "      'full_name': 'lockin_IDN',\n",
+       "      'post_delay': 0,\n",
+       "      'label': 'IDN',\n",
+       "      'vals': '<Anything>',\n",
+       "      'name': 'IDN',\n",
+       "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "      'instrument_name': 'lockin',\n",
+       "      'unit': '',\n",
+       "      'inter_delay': 0},\n",
+       "     'g': {'value': 0,\n",
+       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'raw_value': 0,\n",
+       "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
+       "      'full_name': 'lockin_g',\n",
+       "      'post_delay': 0,\n",
+       "      'label': 'Gate g',\n",
+       "      'vals': '<Numbers -800<=v<=400>',\n",
+       "      'name': 'g',\n",
+       "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
+       "      'instrument_name': 'lockin',\n",
+       "      'unit': 'arb. un.',\n",
+       "      'inter_delay': 0}},\n",
+       "    'name': 'lockin'}},\n",
+       "  'parameters': {},\n",
+       "  'components': {},\n",
+       "  'default_measurement': []}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snapshot_dict['201']"
    ]
   },
   {
