Fix typo in notebook

--- a/docs/examples/DataSet/Merging existing datasets.ipynb
+++ b/docs/examples/DataSet/Merging existing datasets.ipynb
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 201\n"
+      "Starting experimental run with id: 211\n"
      ]
     }
    ],
@@ -927,8 +927,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x263bc29b4e0>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x263bc201278>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x1c06a97f208>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x1c06aadc390>])"
       ]
      },
      "execution_count": 5,
@@ -958,7 +958,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 202\n"
+      "Starting experimental run with id: 212\n"
      ]
     }
    ],
@@ -1771,8 +1771,8 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x263ab36cf98>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x263bc345ba8>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x1c06ebb5470>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x1c06a9b12e8>])"
       ]
      },
      "execution_count": 7,
@@ -1795,14 +1795,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting experimental run with id: 203\n"
+      "Starting experimental run with id: 214\n"
      ]
     }
    ],
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2632,11 +2632,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x263bc356f98>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x263bc2fe9b0>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x1c06fbd4400>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x1c06aa9c7f0>])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2656,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2668,7 +2668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3463,11 +3463,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x263bc23b160>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x263c1308e80>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x1c06ecc02b0>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x1c06ef1a908>])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3478,7 +3478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4273,11 +4273,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axes._subplots.AxesSubplot at 0x263c12709b0>],\n",
-       " [<matplotlib.colorbar.Colorbar at 0x263c21240f0>])"
+       "([<matplotlib.axes._subplots.AxesSubplot at 0x1c06edd1400>],\n",
+       " [<matplotlib.colorbar.Colorbar at 0x1c06ef928d0>])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4298,7 +4298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4317,14 +4317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['201', '202', '203']\n"
+      "['211', '212', '214']\n"
      ]
     }
    ],
@@ -4334,7 +4334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4347,47 +4347,47 @@
        "       'model': 'dac',\n",
        "       'serial': None,\n",
        "       'firmware': None},\n",
-       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'ts': '2018-08-02 10:17:56',\n",
        "      'raw_value': {'vendor': None,\n",
        "       'model': 'dac',\n",
        "       'serial': None,\n",
        "       'firmware': None},\n",
        "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
        "      'full_name': 'dac_IDN',\n",
-       "      'post_delay': 0,\n",
        "      'label': 'IDN',\n",
+       "      'unit': '',\n",
+       "      'post_delay': 0,\n",
+       "      'inter_delay': 0,\n",
        "      'vals': '<Anything>',\n",
        "      'name': 'IDN',\n",
        "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
-       "      'instrument_name': 'dac',\n",
-       "      'unit': '',\n",
-       "      'inter_delay': 0},\n",
+       "      'instrument_name': 'dac'},\n",
        "     'ch1': {'value': 0,\n",
-       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'ts': '2018-08-02 10:17:56',\n",
        "      'raw_value': 0,\n",
        "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
        "      'full_name': 'dac_ch1',\n",
-       "      'post_delay': 0,\n",
        "      'label': 'Gate ch1',\n",
+       "      'unit': 'V',\n",
+       "      'post_delay': 0,\n",
+       "      'inter_delay': 0,\n",
        "      'vals': '<Numbers -800<=v<=400>',\n",
        "      'name': 'ch1',\n",
        "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
-       "      'instrument_name': 'dac',\n",
-       "      'unit': 'V',\n",
-       "      'inter_delay': 0},\n",
+       "      'instrument_name': 'dac'},\n",
        "     'ch2': {'value': 0,\n",
-       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'ts': '2018-08-02 10:17:56',\n",
        "      'raw_value': 0,\n",
        "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
        "      'full_name': 'dac_ch2',\n",
-       "      'post_delay': 0,\n",
        "      'label': 'Gate ch2',\n",
+       "      'unit': 'V',\n",
+       "      'post_delay': 0,\n",
+       "      'inter_delay': 0,\n",
        "      'vals': '<Numbers -800<=v<=400>',\n",
        "      'name': 'ch2',\n",
        "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
-       "      'instrument_name': 'dac',\n",
-       "      'unit': 'V',\n",
-       "      'inter_delay': 0}},\n",
+       "      'instrument_name': 'dac'}},\n",
        "    'name': 'dac'},\n",
        "   'lockin': {'functions': {},\n",
        "    'submodules': {},\n",
@@ -4396,47 +4396,47 @@
        "       'model': 'lockin',\n",
        "       'serial': None,\n",
        "       'firmware': None},\n",
-       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'ts': '2018-08-02 10:17:56',\n",
        "      'raw_value': {'vendor': None,\n",
        "       'model': 'lockin',\n",
        "       'serial': None,\n",
        "       'firmware': None},\n",
        "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
        "      'full_name': 'lockin_IDN',\n",
-       "      'post_delay': 0,\n",
        "      'label': 'IDN',\n",
+       "      'unit': '',\n",
+       "      'post_delay': 0,\n",
+       "      'inter_delay': 0,\n",
        "      'vals': '<Anything>',\n",
        "      'name': 'IDN',\n",
        "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
-       "      'instrument_name': 'lockin',\n",
-       "      'unit': '',\n",
-       "      'inter_delay': 0},\n",
+       "      'instrument_name': 'lockin'},\n",
        "     'g': {'value': 0,\n",
-       "      'ts': '2018-08-01 15:33:18',\n",
+       "      'ts': '2018-08-02 10:17:56',\n",
        "      'raw_value': 0,\n",
        "      '__class__': 'qcodes.instrument.parameter.Parameter',\n",
        "      'full_name': 'lockin_g',\n",
-       "      'post_delay': 0,\n",
        "      'label': 'Gate g',\n",
+       "      'unit': 'arb. un.',\n",
+       "      'post_delay': 0,\n",
+       "      'inter_delay': 0,\n",
        "      'vals': '<Numbers -800<=v<=400>',\n",
        "      'name': 'g',\n",
        "      'instrument': 'qcodes.tests.instrument_mocks.DummyInstrument',\n",
-       "      'instrument_name': 'lockin',\n",
-       "      'unit': 'arb. un.',\n",
-       "      'inter_delay': 0}},\n",
+       "      'instrument_name': 'lockin'}},\n",
        "    'name': 'lockin'}},\n",
        "  'parameters': {},\n",
        "  'components': {},\n",
        "  'default_measurement': []}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "snapshot_dict['201']"
+    "snapshot_dict[str(dsid1)]"
    ]
   },
   {
